# data-mining-materials

./: adaboost.ipynb  altman_z_score.ipynb  apriori.ipynb  dbscan.ipynb  decision_trees.ipynb  eclat.ipynb  em_gaussian_mixture.ipynb  frequent_pattern_growth.ipynb  gini.ipynb  hierarchical_agglomerative.ipynb  isolation_forest.ipynb  k_means.ipynb  k_means_v2.ipynb  k_medoids.ipynb  k_nearest_neighbors.ipynb  linear_regression.ipynb  local_outlier_factor.ipynb  logistical_regression.ipynb  naive_bayes.ipynb  ohlson_o_score.ipynb  pagerank.ipynb  partitioning_around_medoids.ipynb  principal_component_analysis.ipynb  pyproject.toml  random_forest.ipynb  support_vector_machine.ipynb
algorithms/: adaboost.py  altman_z_score.py  apriori.py  dbscan.py  decision_trees.py  eclat.py  em_gaussian_mixture.py  frequent_pattern_growth.py  gini.py  hierarchical_agglomerative.py  isolation_forest.py  k_means.py  k_means_v2.py  k_medoids.py  k_nearest_neighbors.py  linear_regression.py  local_outlier_factor.py  logistical_regression.py  naive_bayes.py  ohlson_o_score.py  pagerank.py  partitioning_around_medoids.py  principal_component_analysis.py  random_forest.py  sting.py  support_vector_machine.py  wavecluster.py
