[project]
name = "data-mining-scripts"
version = "0.1.0"
description = "Data mining skripte"
authors = [{ name = "@jovan.popovic", email = "jovan.p@coinis.com" }]
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
